# LunarAlighting

./: .gitignore  CMakeLists.txt  CNNBASE_DOXYGEN_DOCUMENTATION.md  DOXYGEN_DOCUMENTATION.md  DOXYGEN_IMPLEMENTATION_REPORT.md  INTEGRATION_COMPLETE.md  Logger.py  MLPBASE_DOXYGEN_DOCUMENTATION.md  MLPBASE_IMPLEMENTATION_REPORT.md  README.md  VISUALIZATION_README.md  VISUALIZATION_SUMMARY.md  data_logger.py  debug_zmq.py  main.cpp  requirements.txt  requirements_visualization.txt  run_training.py  start_gym_server.py  test_cpp_client_simulation.py  test_data.json  test_full_workflow.py  test_integration.py  test_logger_simple.py  test_realtime_workflow.py  test_server_connection.py  test_visualization_system.py  training_data.json  visualization_dashboard.py
GymServer/: envs.py  lunar_alighting_env.py  messages.py  server.py  zmqServer.py
LunarAlighting/: Communication.cpp  Communication.hpp  GymClient.cpp  LunarSimulation.cpp  Request.hpp  TrainingDataExporter.hpp
UnitsTest/: UnitsTest.cpp
include/: LunarAlighting.hpp  ObservationNormalizer.hpp  RunningMeanStd.hpp  Space.hpp  Storage.hpp
include/Algorithms/: A2c.hpp  Algorithm.hpp  PPO.hpp
include/Distribution/: Burnoulli.hpp  Categorical.hpp  Distribution.hpp  Normal.hpp
include/Generator/: FeedForwardGenerator.hpp  Generator.hpp  RecurrentGenerator.hpp
include/Model/: CNNBase.hpp  OutputLayers.hpp  mlp_base.hpp  modelUtils.hpp  nnBase.hpp  policy.hpp
src/: ObservationNormalizer.cpp  RunningMeanStd.cpp  Storage.cpp
src/Algorithm/: A2c.cpp  PPO.cpp
src/Distribution/: Bernoulli.cpp  Categorical.cpp  Distribution.cpp  Normal.cpp
src/Generator/: FeedForwardGenerator.cpp  RecurrentGenerator.cpp
src/Model/: CNNBase.cpp  OutputLayer.cpp  Policy.cpp  mlp_base.cpp  modelUtils.cpp  nnBase.cpp
